test/files/neg/t12159d/X_3.java
// javaVersion: 17+
package p;

sealed abstract public class X_3 {
}

final class W extends X_3 {
}

final class Y extends X_3 {
}

final class Z extends X_3 {
}
